<resources>
    <string name="app_name">Kiwi Cookies and Cakes - Inventory</string>

    <!-- login error message strings -->
    <string name="login_details_required_header">Please enter your</string>
    <string name="error_incorrect_login">Sorry. We did not recognise that user/password combination. Please try again</string>

    <!-- conjunction for error messages -->
    <string name="and">and</string>

    <!-- support for error messages related to user details -->
    <string name="add_user_details_required_header">Please enter</string>
    <string name="user_field_name">user name</string>
    <string name="password_field_name">password</string>
    <string name="date_of_birth_field_name">date of birth</string>
    <string name="employee_number_field_name">employee number</string>
    <string name="user_phone_number_field_name">phone number</string>
    <string name="user_address_field_name">address</string>
    <string name="add_user_error_unable_to_add">Sorry. We cannot add that user because the user name is duplicated. Please try again</string>

    <!-- Delete User error message strings -->
    <string name="delete_user_details_required_header">Please enter</string>
    <string name="delete__user_error_unable_to_delete">Sorry. We cannot find that user. Please try again</string>

    <!--Added automatically by Android Studio -->
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_users">Users</string>
    <string name="menu_inventory">Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- miscellaneous-->
    <string name="mandatory_indicator">*</string>
    <string name="missing_details_header">Please enter</string>
    <string name="login_error_header">Please enter your</string>

    <!-- from assignment 2 -->
    <string name="login_button_label">Login</string>
    <string name="login_error_user_name">User Name</string>
    <string name="login_error_password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_home_header">Home</string>
    <string name="tab_text_inventory">Inventory</string>
    <string name="logout">Logout</string>
    <string name="welcome_message_header">Welcome</string>
    <string name="add_inventory_title">Add Inventory Item</string>
    <string name="inventory_name_label">Item Name</string>
    <string name="inventory_quantity_label">Quantity</string>
    <string name="required">Required</string>
    <string name="add">Add</string>

    <!-- general purpose strings -->
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>>
    <string name="previous">Previous</string>

    <!-- inventory strings -->
    <string name="action_clear_items">Clear Items</string>
    <string name="action_add_test_items">Add Test Items</string>
    <string name="missing_inventory_item_name">Item Name</string>
    <string name="missing_inventory_item_quantity">Quantity</string>
    <string name="duplicate_inventory_item">Sorry. That item is already in inventory</string>
    <string name="added_to_inventory">added to Inventory</string>
    <string name="discarding_title">Discarding</string>
    <string name="discard_warning_message">Do you want to discard this draft inventory item?</string>
    <string name="keep_draft">Keep draft</string>
    <string name="discard_draft">Discard</string>
    <string name="inventory_add_cancelled">Discarded draft inventory item</string>
    <string name="adding_test_items">Adding Test Items</string>
    <string name="check_add_test_items">Are you sure you want to add the test items?</string>
    <string name="clearing_all_inventory_items">Clearing all Items</string>
    <string name="check_clear_inventory_items">Are you sure you want to delete all inventory items?</string>
    <string name="item_type_label">Item Type</string>
    <string name="item_type_biscuit">Biscuit</string>
    <string name="item_type_cookie">Cookie</string>
    <string name="item_type_cake">Cake</string>
    <string name="item_type_ingredient">Ingredient</string>
    <string name="item_type_other">Other</string>


    <!-- user detail -->
    <string name="user_list_label">Users</string>
    <string name="user_detail_label">User</string>
    <string name="add_user_label">Add User</string>
    <string name="user_name_label">User</string>
    <string name="password_label">Password</string>
    <string name="date_of_birth_label">Date of Birth</string>
    <string name="employee_number_label">Employee Number</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="address_label">Address</string>
    <string name="administrator_label">Administrator</string>
    <string name="added_to_users">added to users</string>
    <string name="duplicate_user">Sorry. That user name is already registered</string>
    <string name="remove_user_label">Remove User</string>
    <string name="remove_user_button">Remove User</string>
    <string name="action_remove_user">Remove User</string>

</resources>