<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="nz.co.afleet.bit603_a3_johnmcpherson.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_users"
        android:name="nz.co.afleet.bit603_a3_johnmcpherson.ui.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_inventory"
        android:name="nz.co.afleet.bit603_a3_johnmcpherson.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_inventory" />
    <fragment
        android:id="@+id/nav_item_list_fragment"
        android:name="nz.co.afleet.bit603_a3_johnmcpherson.ItemListFragment"
        android:label="ItemListFragment">
        <action
            android:id="@+id/show_item_detail"
            app:destination="@id/item_detail_fragment" />
    </fragment>
    <fragment
        android:id="@+id/item_detail_fragment"
        android:name="nz.co.afleet.bit603_a3_johnmcpherson.ItemDetailFragment"
        android:label="item_detail"
        tools:layout="@layout/fragment_item_detail">
        <argument
            android:name="item_id"
            android:defaultValue=""
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/fragment_item_detail"
        android:name="nz.co.afleet.bit603_a3_johnmcpherson.ItemDetailFragment"
        android:label="@string/title_item_detail"
        tools:layout="@layout/fragment_item_detail">
        <argument
            android:name="item_id"
            android:defaultValue=""
            app:argType="string" />
    </fragment>
    <include app:graph="@navigation/phone_primary_details_nav_graph" />
    <include app:graph="@navigation/sw600_primary_details_sub_nav_graph" />
</navigation>