<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserActivity">

        <TextView
            android:id="@+id/textUserNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/user_name_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextUserName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/password_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextPassword"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textDateOfBirthLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/date_of_birth_field_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextDateOfBirth"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textEmployeeNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/employee_number_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextEmployeeNumber"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textPhoneNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/phone_number_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextPhoneNumber"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/address_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextAddress"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="textUserNameLabel, textPasswordLabel, textDateOfBirthLabel, textEmployeeNumberLabel, textPhoneNumberLabel, textAddressLabel"
            tools:layout_editor_absoluteX="223dp"
            tools:layout_editor_absoluteY="160dp" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/required"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintStart_toEndOf="@+id/barrierVertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:context="nz.co.afleet.bit603_a3_johnmcpherson.ui.users.UserDetailFragment" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/required"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintStart_toEndOf="@id/barrierVertical"
            app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

        <EditText
            android:id="@+id/editTextDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/required"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_constraintStart_toEndOf="@id/barrierVertical"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <!--Assumption: alphanumeric allowed for employee number e.g. "K123" -->
        <EditText
            android:id="@+id/editTextEmployeeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/required"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintStart_toEndOf="@id/barrierVertical"
            app:layout_constraintTop_toBottomOf="@+id/editTextDateOfBirth" />

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:inputType="phone"
            android:minHeight="48dp"
            android:hint="@string/required"
            app:layout_constraintStart_toEndOf="@id/barrierVertical"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmployeeNumber" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/required"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            app:layout_constraintStart_toEndOf="@id/barrierVertical"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber" />

        <TextView
            android:id="@+id/textErrorMessageAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal"
            android:textColor="@color/mandatory_and_error_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textErrorMessageAdd" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonCancel"
            app:layout_constraintTop_toBottomOf="@+id/textErrorMessageAdd" />


</androidx.constraintlayout.widget.ConstraintLayout>