<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.users.UserDetailFragment">

        <TextView
            android:id="@+id/textUserNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/user_name_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/textUserName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="User"
            android:textIsSelectable="false"
            app:layout_constraintStart_toEndOf="@+id/barrierVertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:context="nz.co.afleet.bit603_a3_johnmcpherson.ui.users.UserDetailFragment" />

        <TextView
            android:id="@+id/textPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/password_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/textPassword"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textDateOfBirthLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/add_user_date_of_birth_field_name"
            app:layout_constraintBaseline_toBaselineOf="@+id/textDateOfBirth"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textEmployeeNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/employee_number_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/textEmployeeNumber"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textPhoneNumberLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/phone_number_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/textPhoneNumber"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/address_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/textAddress"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="textUserNameLabel, textPasswordLabel, textDateOfBirthLabel, textEmployeeNumberLabel, textPhoneNumberLabel, textAddressLabel"
            tools:layout_editor_absoluteX="223dp"
            tools:layout_editor_absoluteY="160dp" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="Password"
            app:layout_constraintStart_toEndOf="@id/barrierVertical"
            app:layout_constraintTop_toBottomOf="@+id/textUserName" />

        <TextView
            android:id="@+id/textDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="DoB"
            app:layout_constraintStart_toEndOf="@id/barrierVertical"
            app:layout_constraintTop_toBottomOf="@+id/textPassword" />

        <TextView
            android:id="@+id/textEmployeeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="Employee Number"
            app:layout_constraintStart_toEndOf="@id/barrierVertical"
            app:layout_constraintTop_toBottomOf="@+id/textDateOfBirth" />

        <TextView
            android:id="@+id/textPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="Phone Number"
            app:layout_constraintStart_toEndOf="@id/barrierVertical"
            app:layout_constraintTop_toBottomOf="@+id/textEmployeeNumber" />

        <TextView
            android:id="@+id/textAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="Address"
            app:layout_constraintStart_toEndOf="@id/barrierVertical"
            app:layout_constraintTop_toBottomOf="@+id/textPhoneNumber" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textErrorMessageAdd" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonCancel"
            app:layout_constraintTop_toBottomOf="@+id/textErrorMessageAdd" />

        <TextView
            android:id="@+id/textErrorMessageAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="Dummy Error Message"
            android:gravity="center_horizontal"
            android:textColor="@color/mandatory_and_error_indicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAddress"
            tools:layout_editor_absoluteX="153dp" />


</androidx.constraintlayout.widget.ConstraintLayout>